Fixed alignment of bullet thread indicator

--- a/custom.css
+++ b/custom.css
@@ -469,7 +469,7 @@ a.title h1.title {
 .ls-block .ls-block > div > div.items-center::before {
   pointer-events: none;
   content: "";
-  left: calc(var(--ls-block-bullet-threading-width) * -1 + 1px);
+  left: calc(var(--ls-block-bullet-threading-width) * -1 + 0.5px);
   right: 6px;
   top: calc(-50% + var(--ls-block-bullet-threading-width) * 0.5 - 1px);
   bottom: 50%;
@@ -488,7 +488,7 @@ a.title h1.title {
   top: -1rem;
   bottom: 0;
   border-left: var(--ls-block-bullet-threading-width) solid transparent;
-  left: calc(var(--ls-block-bullet-threading-width) * -1 + 1px);
+  left: calc(var(--ls-block-bullet-threading-width) * -1 + 0.5px);
   position: absolute;
 }
 .ls-block .block-children:focus-within > .ls-block:not(:focus-within)::before {
